syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "service.trade-engine/proto/tradeengine.proto";

option go_package = "sasha/service.trade-account/proto;tradeaccountproto";

service tradeaccount {

  /// --- Accounts --- ///
  rpc ListAccounts (ListAccountsRequest) returns (ListAccountsResponse) {
  }

  rpc ReadAccount (ReadAccountRequest) returns (ReadAccountResponse) {
  }

  rpc CreateAccount (CreateAccountRequest) returns (CreateAccountResponse) {
  }

  rpc UpdateAccount (UpdateAccountRequest) returns (UpdateAccountResponse) {
  }

  rpc PageAccount (PageAccountRequest) returns (PageAccountResponse) {
  }

  /// --- Venue Account --- ///
  rpc AddVenueAccount (AddVenueAccountRequest) returns (AddVenueAccountResponse) {
  }

  rpc CreateOrUpdateInternalVenueAccount (CreateOrUpdateInternalVenueAccountRequest) returns (CreateOrUpdateInternalVenueAccountResponse) {
  }

  rpc ListVenueAccounts (ListVenueAccountsRequest) returns (ListVenueAccountsResponse) {
  }

  rpc ReadVenueAccountByVenueAccountID (ReadVenueAccountByVenueAccountIDRequest) returns (ReadVenueAccountByVenueAccountIDResponse) {
  }

  rpc ReadVenueAccountByVenueAccountDetails (ReadVenueAccountByVenueAccountDetailsRequest) returns (ReadVenueAccountByVenueAccountDetailsResponse) {
  }

  rpc ReadPrimaryVenueAccountByUserID (ReadPrimaryVenueAccountByUserIDRequest) returns (ReadPrimaryVenueAccountByUserIDResponse) {}

  rpc ReadInternalVenueAccount (ReadInternalVenueAccountRequest) returns (ReadInternalVenueAccountResponse) {}
}

enum PagerType {
    DISCORD = 0;
    PHONE = 1;
    SMS = 2;
    EMAIL = 3;
}

enum PagerPriority {
    HIGH = 0;
    LOW = 1;
}

enum VenueAccountType {
    TESTING = 0;
    TRADING = 1;
    TREASURY = 2;
}

// Only used for responses, we currently don't have mechanisms to remove sensitived data such
// as keys or phones. This should only contain insensitive data.
message Account {
    string user_id = 1;
    string email = 2;
    bool is_futures_member = 3;
    bool is_admin = 4;
    string username = 5;
    google.protobuf.Timestamp created = 6;
    google.protobuf.Timestamp last_updated = 7;
    google.protobuf.Timestamp last_payment_timestamp = 8;
    string primary_venue = 9;
    string default_dca_strategy = 10;
}

message VenueAccount {
    VENUE venue = 1;
    string api_key = 2;
    string secret_key = 3;
    string sub_account = 4;
    bool is_active = 5;
    string venue_account_id = 6;
    string url = 7;
    string ws_url = 8;
    string account_alias = 9;
}

message InternalVenueAccount {
    VENUE venue = 1;
    string api_key = 2;
    string secret_key = 3;
    string sub_account = 4;
    string venue_account_id = 6;
    string url = 7;
    string ws_url = 8;
    VenueAccountType venue_account_type = 9;
}

message ListAccountsRequest{
    bool is_futures_member = 1;
}

message ListAccountsResponse {
    repeated Account accounts = 1;
}

message ReadAccountRequest {
    string user_id = 1;
}

message ReadAccountResponse {
    Account account = 1;
}

message CreateAccountRequest {
    string user_id = 4;
    string username = 1;
    string email = 3;
    string phone_number = 5;
    PagerType high_priority_pager = 6;
    PagerType low_priority_pager = 7;
}

message CreateAccountResponse {}

message UpdateAccountRequest {
    string user_id = 1;
    string username = 2;
    string email = 4;
    string phone_number = 5;
    PagerType high_priority_pager = 6;
    PagerType low_priority_pager = 7;
    bool is_admin = 9;
    bool is_futures = 10;
    string actor_id = 11;
    string default_dca_strategy = 12;
    VENUE primary_venue = 13;
}

message UpdateAccountResponse {
    Account account = 1;
}

message PageAccountRequest {
    string user_id = 1;
    string content = 2;
    PagerPriority priority = 3;
}

message PageAccountResponse {}

message AddVenueAccountRequest {
    VenueAccount venue_account = 1;
    string user_id = 2;
    string actor_id = 3;
}

message AddVenueAccountResponse {
    VenueAccount venue_account = 1;
    bool verified = 2;
    string reason = 3;
}

message CreateOrUpdateInternalVenueAccountRequest {
    InternalVenueAccount internal_venue_account = 1;
    string user_id = 2;
    string actor_id = 3;
    bool allow_updates = 4;
}

message CreateOrUpdateInternalVenueAccountResponse {
    InternalVenueAccount internal_venue_account = 1;
    bool verified = 2;
    string reason = 3;
}

message ListVenueAccountsRequest {
    string user_id = 1;
    bool active_only = 2;
    string actor_id = 3;
    bool with_unmasked_credentials = 4;
}

message ListVenueAccountsResponse {
    repeated VenueAccount venue_accounts = 1;
}

message ReadVenueAccountByVenueAccountIDRequest {
    string venue_account_id = 1;
}

message ReadVenueAccountByVenueAccountIDResponse{
    VenueAccount venue_account = 1;
}

message ReadPrimaryVenueAccountByUserIDRequest {
    string user_id = 1;
    string actor_id = 2;
}

message ReadPrimaryVenueAccountByUserIDResponse {
    VenueAccount primary_venue_account = 1;
}

message ReadVenueAccountByVenueAccountDetailsRequest {
    VENUE venue = 1;
    string user_id = 2;
    string subaccount = 3;
    string actor_id = 4;
    string request_context = 5;
    string account_alias = 6;
}

message ReadVenueAccountByVenueAccountDetailsResponse {
    VenueAccount venue_account = 1;
}

message ReadInternalVenueAccountRequest {
    VENUE venue = 1;
    VenueAccountType venue_account_type = 2;
    string subaccount = 3;
    string actor_id = 4;
}

message ReadInternalVenueAccountResponse {
    InternalVenueAccount internal_venue_account = 1;
}
